# BAMC

./: BAMC.m  BAMC_demo.m  README.md  UCI.mat
funs/: setup_path.m
funs/EProjSimplex/: .clang-format  CMakeLists.txt  EProjSimplex_native.cpp
